[Portal.Theme] Updated workspace background and navigation ; Fixed: content-area wrapper failed to stretch with content height.

--- a/portal.theme/trunk/portal/theme/static/css/reset.css
+++ b/portal.theme/trunk/portal/theme/static/css/reset.css
@@ -1289,6 +1289,7 @@ h4.tabberHeading {
      * - required for sticky footer
      */
     height: auto;
+    overflow: auto;
     min-height: 100%;
 }
 .template-workspace span#corner-a,
